update demo script

--- a/scripts/demo-single_category.ipynb
+++ b/scripts/demo-single_category.ipynb
@@ -9,6 +9,7 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext lab_black\n",
     "%cd .."
    ]
   },
@@ -63,10 +64,10 @@
    },
    "outputs": [],
    "source": [
-    "gen32_args_path = \"config/gen32/airplane.yaml\"\n",
-    "gen32_ckpt_path = \"results/gen32/airplane.pth\"\n",
-    "sr64_args_path = \"config/sr32_64/airplane.yaml\"\n",
-    "sr64_ckpt_path = \"results/sr32_64/airplane.pth\""
+    "gen32_args_path = \"config/gen32/chair.yaml\"\n",
+    "gen32_ckpt_path = \"results/gen32/chair.pth\"\n",
+    "sr64_args_path = \"config/sr32_64/chair.yaml\"\n",
+    "sr64_ckpt_path = \"results/sr32_64/chair.pth\""
    ]
   },
   {
@@ -165,12 +166,14 @@
    "id": "03c31d13-c9b5-42b3-bf7e-6819aee68b44",
    "metadata": {},
    "source": [
-    "# Generate Low-Resolution ($32^3$)"
+    "# Generate Low-Resolution ($32^3$)\n",
+    "\n",
+    "Generates 5 low-resolution samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "06e759bd-f309-48e5-8c1e-e7b8fb0dfa2d",
    "metadata": {
     "tags": []
@@ -180,17 +183,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:04<00:00, 10.55it/s]\n"
+      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:06<00:00,  7.94it/s]\n"
      ]
     }
    ],
    "source": [
-    "out1 = ddpm_sampler1.sample_ddim(model1, (1, 1, 32, 32, 32), show_pbar=True)"
+    "out1 = ddpm_sampler1.sample_ddim(model1, (5, 1, 32, 32, 32), show_pbar=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "91fceb1e-d513-40b5-8954-e766fb82808a",
    "metadata": {
     "tags": []
@@ -199,10 +202,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 32, 32, 32])"
+       "torch.Size([5, 1, 32, 32, 32])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "997dc3e6-1c88-4245-9bfb-909d8247c016",
    "metadata": {
     "tags": []
@@ -222,20 +225,25 @@
    "outputs": [],
    "source": [
     "# save as an obj file\n",
-    "save_sdf_as_mesh(\"gen32.obj\", out1, safe=True)"
+    "for i, out in enumerate(out1):\n",
+    "    save_sdf_as_mesh(f\"gen32_{i}.obj\", out, safe=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "8e6cd8bf-2c9e-46bd-8d58-e425f0748efe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Super-Resolve to High-Resolution ($64^3$)"
+    "# Super-Resolve to High-Resolution ($64^3$)\n",
+    "\n",
+    "Upsample to generate 5 high-resoltion samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "7c46006f-2c98-4088-be76-9c3ffecb15a0",
    "metadata": {
     "tags": []
@@ -245,19 +253,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:09<00:00,  5.52it/s]\n"
+      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:42<00:00,  1.17it/s]\n"
      ]
     }
    ],
    "source": [
     "lr_cond = F.interpolate(out1, (64, 64, 64), mode=\"nearest\")\n",
     "lr_cond = preprocessor2.standardize(lr_cond, 0)\n",
-    "out2 = ddpm_sampler2.sample_ddim(lambda x, t: model2(th.cat([lr_cond, x], 1), t), (1, 1, 64, 64, 64), show_pbar=True)"
+    "out2 = ddpm_sampler2.sample_ddim(lambda x, t: model2(th.cat([lr_cond, x], 1), t), (5, 1, 64, 64, 64), show_pbar=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "d0ac86c4-a387-41fe-94ca-e7c49862e489",
    "metadata": {
     "tags": []
@@ -266,10 +274,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 64, 64, 64])"
+       "torch.Size([5, 1, 64, 64, 64])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "bc5a6187-1796-4a1c-9980-b25a3355c237",
    "metadata": {
     "tags": []
@@ -289,7 +297,8 @@
    "outputs": [],
    "source": [
     "# save as an obj file\n",
-    "save_sdf_as_mesh(\"sr64.obj\", out2, safe=True)"
+    "for i, out in enumerate(out2):\n",
+    "    save_sdf_as_mesh(f\"sr64_{i}.obj\", out, safe=True)"
    ]
   },
   {
