--- a/scripts/demo-multi-category.ipynb
+++ b/scripts/demo-multi-category.ipynb
@@ -177,12 +177,12 @@
    },
    "outputs": [],
    "source": [
-    "c = th.randint(0, 13, (1,), dtype=th.int64, device=\"cuda\")"
+    "c = th.randint(0, 13, (5,), dtype=th.int64, device=\"cuda\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "06e759bd-f309-48e5-8c1e-e7b8fb0dfa2d",
    "metadata": {
     "tags": []
@@ -192,17 +192,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:04<00:00, 11.41it/s]\n"
+      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:09<00:00,  5.25it/s]\n"
      ]
     }
    ],
    "source": [
-    "out1 = ddpm_sampler1.sample_ddim(lambda x, t: model1(x, t, c=c), (1, 1, 32, 32, 32), show_pbar=True)"
+    "out1 = ddpm_sampler1.sample_ddim(lambda x, t: model1(x, t, c=c), (5, 1, 32, 32, 32), show_pbar=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "91fceb1e-d513-40b5-8954-e766fb82808a",
    "metadata": {
     "tags": []
@@ -211,10 +211,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 32, 32, 32])"
+       "torch.Size([5, 1, 32, 32, 32])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,28 +226,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "997dc3e6-1c88-4245-9bfb-909d8247c016",
+   "execution_count": 13,
+   "id": "9076fbc4-e7a3-42f9-b041-e713caff03d0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# save as an obj file\n",
-    "save_sdf_as_mesh(\"gen32.obj\", out1, safe=True)"
+    "for i, out in enumerate(out1):\n",
+    "    save_sdf_as_mesh(f\"gen32_{i}.obj\", out, safe=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "8e6cd8bf-2c9e-46bd-8d58-e425f0748efe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Super-Resolve to High-Resolution ($64^3$)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7c46006f-2c98-4088-be76-9c3ffecb15a0",
    "metadata": {
     "tags": []
@@ -257,19 +260,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:09<00:00,  5.46it/s]\n"
+      "Sample DDIM: 100%|██████████████████████████████████████████████████████████████████████████████| 50/50 [00:42<00:00,  1.17it/s]\n"
      ]
     }
    ],
    "source": [
     "lr_cond = F.interpolate(out1, (64, 64, 64), mode=\"nearest\")\n",
     "lr_cond = preprocessor2.standardize(lr_cond, 0)\n",
-    "out2 = ddpm_sampler2.sample_ddim(lambda x, t: model2(th.cat([lr_cond, x], 1), t, c=c), (1, 1, 64, 64, 64), show_pbar=True)"
+    "out2 = ddpm_sampler2.sample_ddim(lambda x, t: model2(th.cat([lr_cond, x], 1), t, c=c), (5, 1, 64, 64, 64), show_pbar=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d0ac86c4-a387-41fe-94ca-e7c49862e489",
    "metadata": {
     "tags": []
@@ -278,10 +281,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 64, 64, 64])"
+       "torch.Size([5, 1, 64, 64, 64])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,15 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bc5a6187-1796-4a1c-9980-b25a3355c237",
+   "execution_count": 16,
+   "id": "f7f7d23c-56c7-4d30-ae27-dd910623b95c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# save as an obj file\n",
-    "save_sdf_as_mesh(\"sr64.obj\", out2, safe=True)"
+    "for i, out in enumerate(out2):\n",
+    "    save_sdf_as_mesh(f\"sr64_{i}.obj\", out, safe=True)"
    ]
   },
   {
